# distodon

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml  flake.nix  justfile
.github/workflows/: docker.yml
src/: config.rs  discord.rs  http.rs  main.rs  mastodon.rs
