[package]
name = "distodon"
version = "0.1.10"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
log = { version = "0.4.20", default-features = false }
pretty_env_logger = { version = "0.5.0", default-features = false }
regex = { version = "1.9.3", default-features = false }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.187", default-features = false, features = ["derive"] }
serde-aux = { version = "4.2.0", default-features = false }
url = { version = "2.4.0", default-features = false, features = ["serde"] }
